--- a/frondend/facturacion.html
+++ b/frondend/facturacion.html
@@ -388,12 +388,8 @@
       } else {
         nitError.style.display = 'none';
       }
-      document.getElementById('facturaMsg').innerHTML = `
-        <div class="loading-anim">
-          <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-          <div style="margin-top:12px;color:#1a237e;font-weight:600;">Procesando pago...</div>
-        </div>
-      `;
+      // Elimina cualquier animación previa de procesando
+      document.getElementById('facturaMsg').innerHTML = '';
       const token = localStorage.getItem('token');
       const datos = {
         nombre: document.getElementById('nombre').value,
@@ -425,19 +421,38 @@
         });
         const data = await res.json();
         if (res.ok) {
-          document.getElementById('facturaMsg').innerHTML = `
-            <div class="pago-exito-anim pago-exito-anim-mejorada">
-              <svg class="checkmark-svg" viewBox="0 0 80 80">
-                <circle class="circle" cx="40" cy="40" r="36"/>
-                <polyline class="check" points="24,43 36,55 58,30"/>
-              </svg>
-              <h3>¡Pago realizado con éxito!</h3>
-              <div class="pago-btns">
+          // Overlay profesional para animación de éxito
+          const overlay = document.createElement('div');
+          overlay.style.position = 'fixed';
+          overlay.style.left = 0;
+          overlay.style.top = 0;
+          overlay.style.width = '100vw';
+          overlay.style.height = '100vh';
+          overlay.style.background = 'rgba(30,40,80,0.18)';
+          overlay.style.zIndex = 99999;
+          overlay.style.display = 'flex';
+          overlay.style.alignItems = 'center';
+          overlay.style.justifyContent = 'center';
+          overlay.innerHTML = `
+            <div class="pago-exito-anim pago-exito-anim-mejorada" style="background:#fff;padding:44px 38px 32px 38px;border-radius:22px;box-shadow:0 8px 32px #0003;max-width:98vw;min-width:320px;display:flex;flex-direction:column;align-items:center;">
+              <div class="checkmark-svg-wrap" style="display:flex;align-items:center;justify-content:center;width:100%;margin-bottom:18px;">
+                <svg class="checkmark-svg" viewBox="0 0 80 80">
+                  <circle class="circle" cx="40" cy="40" r="36"/>
+                  <polyline class="check" points="24,43 36,55 58,30"/>
+                </svg>
+              </div>
+              <h3 style="color:#388e3c;font-size:1.6rem;font-weight:700;margin:0 0 10px 0;letter-spacing:1px;">¡Pago realizado con éxito!</h3>
+              <div class="pago-btns" style="display:flex;gap:1.5rem;margin-top:10px;">
                 <a href="factura.php?id=${data.facturaId}" target="_blank" class="btn btn-factura">Descargar Factura PDF</a>
                 <a href="factura.php?id=${data.facturaId}&detalles=1" target="_blank" class="btn btn-detalles">Ver Detalles</a>
               </div>
             </div>
           `;
+          document.body.appendChild(overlay);
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+          setTimeout(() => {
+            overlay.addEventListener('click', () => overlay.remove());
+          }, 1200);
         } else {
           document.getElementById('facturaMsg').innerHTML = '<div class="factura-form error">' + (data.error || 'Error al generar factura') + '</div>';
         }
